# image_recognition

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  matrix.cpp  matrix.h  neuralNet.cpp  neuralNet.h
include/: matrix.h  neuralNet.h  neural_net.h  opencv.h  prog_path.h  random.h
src/: main.cpp  matrix.cpp  neuralNet.cpp  opencv.cpp  prog_path.cpp
